@@ -183,6 +183,9 @@ function(wx_write_config)
     foreach(flag IN LISTS wxTOOLKIT_DEFINITIONS)
         wx_string_append(WXCONFIG_CPPFLAGS " -D${flag}")
     endforeach()
+    if(wxBUILD_LARGEFILE_SUPPORT)
+        wx_string_append(WXCONFIG_CPPFLAGS " -D_FILE_OFFSET_BITS=64")
+    endif()
     string(STRIP "${WXCONFIG_CPPFLAGS}" WXCONFIG_CPPFLAGS)
     set(WXCONFIG_CXXFLAGS ${WXCONFIG_CFLAGS})
     set(WXCONFIG_LDFLAGS_GUI)
